--- a/CookTheWeek.Web/scss/sections/_shopping-list.scss
+++ b/CookTheWeek.Web/scss/sections/_shopping-list.scss
@@ -10,15 +10,18 @@
     section#shopping-list-section {
 
         #heading-container {
-            margin-bottom: 12px;
+            margin-bottom: 2rem;
 
             h2 {
                 font-family: $font-family-serif;
+                margin-bottom: 0.5rem;
+                font-size: 1.8rem;
             }
 
             .dates {
-                font-weight: 400;
-                font-size: 14px;
+                margin-left: 0.2rem;
+                font-weight: 300;
+                font-size: 1rem;
 
                 .date {
                     font-weight: 500;
